# ai_generate_game_code

./: README.md  build_exe.py  pack.bat  pack.py  pyproject.toml  run.py  run_app.py  start.bat
app/: __init__.py  config.py  main.py
app/core/: code_index.py  config_index.py  experience_manager.py  llm_settings.py  protocol_index.py  skill_manager.py
app/core/parsers/: code_parser.py  doc_parser.py  excel_parser.py  protocol_parser.py
app/ui/: components.py
app/ui/pages/: p1_framework.py  p2_config.py  p3_docs.py  p4_protocol.py  p6_skills.py  p7_learning.py
game_ai_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
